...
  const stat = useStatColors();
  return (
    <StatGrid>
      <StatGrid.Tile
        icon={{ ios: 'stopwatch.fill', android: 'timer' }}
        color={stat.activeTime}
        label="Active Time"
        {...clockParts(stats.activeS)}
      />
      {stats.distanceM !== null ? (
        <>
          <StatGrid.Tile
            icon={{ ios: 'figure.run', android: 'directions_run' }}
            color={stat.running}
            label="Moving Time"
            {...clockParts(stats.movingTimeS)}
          />
          <StatGrid.Tile
            icon={{ ios: 'location.fill', android: 'my_location' }}
            color={stat.distance}
            label="Distance"
...
